--- a/portfolio.html
+++ b/portfolio.html
@@ -24,43 +24,58 @@
     </header>
 
     <div class="container-fluid content-portfolio">
-        <h2 class="head">
+        <h2 class="head-port">
             Portfolio
-        </h3>
+        </h2>
 
         <hr>
 
-        <div class="container-fluid container-portfolio">
+<div class="row">
+    <div class="col-md-6">
+        <div class="container-portfolio">
             <a href="#"><img class="img-fluid portfolio-img" id="porpic1" src="assets/images/technics-q-c-400-300-2.jpg" alt="Project 1"></a>
 
                 <div class="portfolio-desc">Project 1</div>
         </div>
-
-        <div class="container-fluid container-portfolio">
+    </div>
+    <div class="col-md-6">
+        <div class="container-portfolio">
             <a href="#"><img class="img-fluid portfolio-img" id="porpic2" src="assets/images/technics-q-c-400-300-6.jpg" alt="Project 2"></a>
 
                 <div class="portfolio-desc">Project 2</div>
         </div>
+    </div>
+</div>
 
-        <div class="container-fluid container-portfolio">
+<div class="row">
+    <div class="col-md-6">
+        <div class="container-portfolio">
             <a href="#"><img class="img-fluid portfolio-img" id="porpic3" src="assets/images/technics-q-c-400-300-7.jpg" alt="Project 3"></a>
 
                 <div class="portfolio-desc">Project 3</div>
         </div>
+    </div>
 
-        <div class="container-fluid container-portfolio">
+    <div class="col-md-6">
+        <div class="container-portfolio">
             <a href="#"><img class="portfolio-img" id="porpic4" src="assets/images/technics-q-c-400-300-8.jpg" alt="Project 4"></a>
 
                 <div class="portfolio-desc">Project 4</div>
         </div>
+    </div>
+</div>
 
-        <div class="container-fluid container-portfolio">
+<div class="row">
+    <div class="col-md-6">
+        <div class="container-portfolio">
             <a href="#"><img class="portfolio-img" id="porpic5" src="assets/images/technics-q-c-400-300-9.jpg" alt="Project 5"></a>
 
                 <div class="portfolio-desc">Project 5</div>
         </div>
 
     </div>
+</div>
+</div>
     
     <footer class="footer">
             <div class="container-fluid">
