--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
 <div class="row">
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#"><img class="img-fluid portfolio-img" id="porpic1" src="assets/images/technics-q-c-400-300-2.jpg" alt="Project 1"></a>
+            <a href="https://gsavr.github.io/Word-Guess-Game/"><img class="img-fluid portfolio-img" id="porpic1" src="assets/images/ScienceHangman.jpg" alt="Project 1"></a>
 
-                <div class="portfolio-desc">Project 1</div>
+                <div class="portfolio-desc">Project 1 - Hangman</div>
         </div>
     </div>
     <div class="col-md-6">
