--- a/portfolio.html
+++ b/portfolio.html
@@ -33,16 +33,16 @@
 <div class="row">
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="https://gsavr.github.io/Word-Guess-Game/"><img class="img-fluid portfolio-img" id="porpic1" src="assets/images/ScienceHangman.jpg" alt="Project 1"></a>
+            <a href="https://gsavr.github.io/Word-Guess-Game/" target="_blank"><img class="img-fluid portfolio-img" id="porpic1" src="assets/images/ScienceHangman.jpg" alt="Project 1"></a>
 
                 <div class="portfolio-desc">Project 1 - Hangman</div>
         </div>
     </div>
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#"><img class="img-fluid portfolio-img" id="porpic2" src="assets/images/technics-q-c-400-300-6.jpg" alt="Project 2"></a>
+            <a href="https://gsavr.github.io/unit-4-game/" target="_blank"><img class="img-fluid portfolio-img" id="porpic2" src="assets/images/CrystalCollector.png" alt="Project 2"></a>
 
-                <div class="portfolio-desc">Project 2</div>
+                <div class="portfolio-desc">Project 2 - Crystal Collector</div>
         </div>
     </div>
 </div>
@@ -50,15 +50,15 @@
 <div class="row">
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#"><img class="img-fluid portfolio-img" id="porpic3" src="assets/images/technics-q-c-400-300-7.jpg" alt="Project 3"></a>
+            <a href="https://gsavr.github.io/unit-4-game-sw/" target="_blank"><img class="img-fluid portfolio-img" id="porpic3" src="assets/images/StarWarsRPG.png" alt="Project 3"></a>
 
-                <div class="portfolio-desc">Project 3</div>
+                <div class="portfolio-desc">Project 3 - Star Wars RPG</div>
         </div>
     </div>
 
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#"><img class="portfolio-img" id="porpic4" src="assets/images/technics-q-c-400-300-8.jpg" alt="Project 4"></a>
+            <a href="#" target="_blank"><img class="portfolio-img" id="porpic4" src="assets/images/technics-q-c-400-300-8.jpg" alt="Project 4"></a>
 
                 <div class="portfolio-desc">Project 4</div>
         </div>
@@ -68,7 +68,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#"><img class="portfolio-img" id="porpic5" src="assets/images/technics-q-c-400-300-9.jpg" alt="Project 5"></a>
+            <a href="#" target="_blank"><img class="portfolio-img" id="porpic5" src="assets/images/technics-q-c-400-300-9.jpg" alt="Project 5"></a>
 
                 <div class="portfolio-desc">Project 5</div>
         </div>
