--- a/portfolio.html
+++ b/portfolio.html
@@ -58,9 +58,9 @@
 
     <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#" target="_blank"><img class="portfolio-img" id="porpic4" src="assets/images/technics-q-c-400-300-8.jpg" alt="Project 4"></a>
+            <a href="https://gsavr.github.io/TriviaGame/" target="_blank"><img class="portfolio-img" id="porpic4" src="assets/images/familyguy.png" alt="Project 4"></a>
 
-                <div class="portfolio-desc">Project 4</div>
+                <div class="portfolio-desc">Project 4 - Trivia</div>
         </div>
     </div>
 </div>
