--- a/portfolio.html
+++ b/portfolio.html
@@ -74,14 +74,14 @@
         </div>
 
     </div>
-    <!-- <div class="col-md-6">
+    <div class="col-md-6">
         <div class="container-portfolio">
-            <a href="#" target="_blank"><img class="portfolio-img" id="porpic6" src="assets/images/technics-q-c-400-300-9.jpg" alt="Project 6"></a>
+            <a href="https://gsavr.github.io/trainschedule/" target="_blank"><img class="portfolio-img" id="porpic6" src="assets/images/traintracker.png" alt="Project 6"></a>
     
-                <div class="portfolio-desc">Project 6</div>
+                <div class="portfolio-desc">Project 6 - Train Tracker</div>
         </div>
     
-    </div> -->
+    </div>
 </div>
 
 <!-- <div class="row">
